--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="overlay"></div>
     <!-- top nav -->
     <div class="nav">
-      <div class="menu" onlclick="opneNav()">
+      <div class="menu" onclick="openNav()">
         <div class="hamburger"></div>
       </div>
       <div class="logo">
